--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "server"
     "start": "nodemon server.js"
+    
   },
   "keywords": [],
   "author": "",
